Resources/css/style.css
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
}

html{
    background-color: white;
    color: #8d8d8d;
    font-family:'DM sans', 'Arial', sans-serif;
    font-size: 20px;
    font-weight: 300;
    text-rendering:optimizeLegibility;
}
/*--------------------------------------*/
/*REUSABLE COMPONENTS*/
/*--------------------------------------*/

.row{
    max-width:1140px;
    margin: 0 auto;
    text-align: center;
}

section{
    padding:25px 0;
    padding-top: 50px;
}

h1{
    font-size: 400%;
    font-weight: 200%;
    color: #fff;
}

ion-icon{
    font-size: 25px;
}

.landing-text{
    font-size: 16px;
    color: rgb(29, 29, 29);
    margin: 20px;
}

p{
    font-size: 16px;
    color: rgb(29, 29, 29);
}

.p-left{
    font-size: 16px;
    color: rgb(29, 29, 29);
    text-align: left;
    width: 800px;
    line-height: 185%;
    margin: 0 auto;
    margin-top: 10px;
    margin-bottom: 15px;
}

.p-exp{
    font-size: 16px;
    color: rgb(29, 29, 29);

}

h2{
    color: rgb(36, 36, 36);
    font-size: 225%;
}

hr{
    width: 150px;
    height: 3px;
    border: solid 1px;
    color: #004D99;
    background-color: #004D99;
    margin: 0 auto;
}

.faint{
    width: 150px;
    height: 3px;
    border: solid 1px;
    color: #ebebeb;
    background-color: #ebebeb;
    margin: 0 auto;
}
.textbox{
    width:500px;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
}

.btn:link,
.btn:visited{
    display: inline-block;
    padding: 10px 30px;
    font-weight: 300;
    text-decoration: none;
    border-radius: 10px;
    background-color: #004D99;
    color: #fff;
    transition: background-color 0.2s, border 0.2s, color 0.2s;
}

.btn:hover,
.btn:active{
    background-color: #004d99b7;
}



.hr-big{
    width: 30%;
    height: 3px;
    border: solid 1px;
    color: #004D99;
    background-color: #004D99;
    margin: 0 auto;
    margin-bottom: 8px;
}

h4{
    font-size: 133%;
}

.title-p{
    margin-top: 15px;
    color: rgb(90, 90, 90);
}

h5{
    font-size: 190%;
    color: #000;
    
}

a{
    text-decoration: none;
}
/*--------------------------------------*/
/*HEADER*/
/*--------------------------------------*/
header{
    background-image:  url(img/V20.svg);
    background-size: cover;
    background-position: center;
    height: 100vh;

}

.nav-container{
    display: inline-flex;
    justify-content: center;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 100px;
}

.container-wrap{
    display: inline-flex;
    z-index: -1;
    position: relative;
    border: 3px solid #004D99;
    background-color: #fff;
    border-radius: 15px;
    align-items: center;
    margin-top: 20px;
    width: 30%;
    height: 70%;

}

.nav-container div {
    font-size: 18px;
    display: inline-flex;
    justify-content: center;
}

.nav-left li,
.nav-right li{
    display: inline-block;
    margin: 0 10px;
}

.nav-left li a:link,
.nav-right li a:link,
.nav-left li a:visited,
.nav-right li a:visited{
    color:rgb(150, 150, 150);
    font-weight: 50%;
    text-decoration: none;
    border: 2px solid transparent;
    transition: color 0.6s;
    transition: border 0.6s;
    border-radius: 5px;
    padding: 4px 10px;
}

.nav-left li a:hover,
.nav-right li a:hover,
.nav-left li a:active,
.nav-right li a:active{
    color: #000;
    border-bottom: 3px solid #004D99;
    border-radius: 5px;
    padding: 4px 10px;
}

.nav-left,
.nav-right{
    list-style: none;
}

.logo img{
    height: auto;
    width: 60px;
    padding-top:8px;
}

.header-textbox{
    padding-top: 8%;
    padding-bottom: 3%;
}

.header-textbox h1{
    text-align: center;
}

.header-container{
    width: 650px;
    height: 450px;
    background-color: rgb(248, 248, 248);
    border-radius: 15px;
    margin: 0 auto;
    box-shadow: 0 4px 8px 0 rgba(150, 150, 150, 0.2), 0 6px 20px 0 rgba(150, 150, 150, 0.19);

}

.img-container{
    text-align: center;
}

.img-container img{
    position: absolute;    
}

.logo-container{
    display: flex;
    justify-content: center;
    position: relative;
    top: 400px;
}

.logo-container div{
    padding: 0 15px;
    padding-bottom: 10px;
}

.logo-container div a:link,
.logo-container div a:visited{
    color:rgb(160, 160, 160);
    transition: color 0.3s;
    text-decoration: none;
    color: inherit;
}

.logo-container div a:hover,
.logo-container div a:active{
    color: #004D99;
}

.exp-landing{
    display:flex;
    justify-content: center;
}

.exp-landing img{
    height: 130px;
    width: auto;
    margin: 20px 10px;

    transform: scale(1);
    transition: transform 0.3s;

}

.exp-landing img:hover{
    transform: scale(1.2);

}



/*--------------------------------------*/
/*FOOTER*/
/*--------------------------------------*/
footer{
    text-align: center;
    margin-bottom: 40px;
    height: 100px;
    margin-top: 40px;
}

.footer-icons{
    display: flex;
    justify-content: center;
}

.footer-icons div{
    padding: 15px 10px;
}

.footer-icons div a:link,
.footer-icons div a:visited{
    color:rgb(160, 160, 160);
    transition: color 0.3s;
}

.footer-icons div a:hover,
.footer-icons div a:active{
    color: #000;
}

.footer-hr{
    width: 400px;
    height: 0.8px;
    border: none;
    color: #dadada;
    background-color: #dadada;
    margin: 0 auto;
}


/*--------------------------------------------------------------------------------------------*/
/*ABOUT ME PAGE*/
/*--------------------------------------------------------------------------------------------*/

.title-h1{
    color: #000;
    font-size: 350%;
}

.eng-logo{
    width: 35%;
    height: auto;
    margin-top: 25px;
}

.hobbies{
    font-size: 16px;
    color: rgb(29, 29, 29);
    text-align: left;
    width: 800px;
    margin: 0 auto;
}

#mikey{
    height: 500px;
    width: auto;
    border-radius: 10px;
}
/*--------------------------------------------------------------------------------------------*/
/*EXPERIENCE PAGE*/
/*--------------------------------------------------------------------------------------------*/
.section-exp{
    margin-bottom: 15%;
    padding: 30px 
}
.btn-container{
    display: flex;
    justify-content: center;
    flex-direction: row;
}

.btn-container div img{
    width: 300px;
    height: 300px;
    border-radius: 15%;
    background-size: cover;
    background-position: center;
    transform: scale(1);
    transition: transform 0.3s;
    margin: 0 30px;
    box-shadow: 0 4px 8px 0 rgba(150, 150, 150, 0.2), 0 6px 20px 0 rgba(150, 150, 150, 0.19);
}

.btn-container div img:hover{
    transform: scale(1.10);
}


.exp-1,
.exp-2,
.exp-3{
    position:relative;
    text-align: center;
}
.center-1,
.center-2,
.center-3{
    position:absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);    
    color: white;
    font-weight: 100%;
}

/*--------------------------------------------------------------------------------------------*/
/*CONTACT PAGE*/
/*--------------------------------------------------------------------------------------------*/



.contact-footer{
    margin-top:450px;
}


/*--------------------------------------------------------------------------------------------*/
/*SUBPAGES*/
/*--------------------------------------------------------------------------------------------*/

.job-box{
    border: 1px solid #004D99;
    border-radius: 18px;
    width: 30%;
    height: 300px;
    margin: 0 auto;
    box-shadow: 0 4px 8px 0 rgba(150, 150, 150, 0.2), 0 6px 20px 0 rgba(150, 150, 150, 0.19);
    margin-bottom: 50px;
    transform: scale(1);
    transition: transform 0.3s;

    display: flex;
    justify-content: center;
    align-items: center;
}

.job-box:hover{
    transform: scale(1.05);

}

.job-box h2{
    align-self: flex-start;
}
.markham{
    height: 200px;
    width: auto;
    margin-left: 100px;
}

.harness{
    height: 200px;
    width: auto;
    margin-left:50px;
}

.job-descrip{
    margin-left: 5%;
}

.btn-arrow:link,
.btn-arrow:visited{
    text-decoration: none;
    font-size: 40px;
    color: #004D99;
    transform: scale(1);
    transition: color 0.5s; 
    transition: transform 0.3s;
}

.btn-arrow:hover,
.btn-arrow:active{
    color:#b6c9fc;
    transform: scale(1.50);
}

.website{
    height: 130px;
    width: auto;
    margin-left:50px ;
}

.dss{
    height: 130px;
    width: auto;
    margin-left:150px ;

}

.admin{
    height: 130px;
    width: auto;
    margin-left: 100px;
}

